style.css
/* ... */
:root {
    --bg-color-dark: #116f8e;
    --main-color-dark: #424874;
    --secondary-bg-color-dark: #131313;
    --text-color-dark: #dfedf4;

    --bg-color-light: #edf7f6;
    --main-color-light: #2e86ab;
    --text-color-light: #071013;
    --secondary-bg-color-light: #f8f8e8c6;

    --main-color: var(--main-color-light);
    --bg-color: var(--bg-color-light);
    --secondary-bg-color: var(--secondary-bg-color-light);
    --text-color: var(--text-color-light);

    --cursor-color: white;
}
.hidden{
    filter: blur(5px);
    transform: translateY(0);
    opacity: 0;
}
.fade-up{
    transform: translateY(220px);
}
.fade-right{
    transform: translateX(-220px) scale(0.9);
}
.fade-left{
    transform: translateX(220px) scale(0.9);
}
.fade-in{
    opacity: 0;
    transform: scale(0);
    filter: blur(10px);
}
.fade-down{
    opacity: 0;
    transform: translateY(-220px);
    filter: blur(10px);
}
.visible-up{
    filter: blur(0);
    transform: translateY(0);
    transition: ease .6s;
    opacity: 1;
}
.visible-right{
    transition: ease .6s .2s;
    transform: translateX(0);
    opacity: 1;
    filter: blur(0);
}
.visible-left{
    transition: ease .6s .2s;
    transform: translateX(0) scale(1);
    opacity: 1;
    filter: blur(0);
}
.visible-in{
    transition: ease .6s .2s;
    transform: scale(1);
    opacity: 1;
    filter: blur(0);
}
.visible-down{
    transition: ease .6s;
    transform: translateY(0);
    opacity: 1;
    filter: blur(0);
}
#header{
    transition: ease .69s;
}
#photo{
    transition: ease .69s .2s;
}
#sec2{
    transition: ease .69s .3s;
}
#sec3{
    transition: ease .69s .4s;
}

body {
    background-color: var(--bg-color);
    color: var(--text-color);
    /* cursor: url('Images/Cursor/pointer.cur'), auto; */
    transition: background-color 300ms ease;
}
.cursor {
    position: fixed;
    width: 20px;
    height: 20px;
    background-color: var(--cursor-color);
    border-radius: 50%;
    pointer-events: none;
    transition: 0.1s;
    mix-blend-mode: difference;
    box-shadow: 0 0 25px var(--cursor-color);
    transform: translate(-50%, -50%) scale(2);
    transition: transform 200ms ease;
    z-index: 999;

}
.cursor.hover {
    transform: translate(-50%, -50%) scale(3);
    /* mix-blend-mode:multiply; */
    z-index: 999;

}
.cursor.small {
    transform: translate(-50%, -50%) scale(0.5);
    background-color: var(--main-color);
    z-index: 999;

}
.small {
    cursor: none;
}

html {
    font-size: 60%;
    overflow-x: hidden;
    /* transition: all 0.2s ease; */
}
a {
    cursor: none;
}
.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 4rem 12% 4rem;
    /* background-color: rgba(0, 0, 0, 0.0); */
    /* backdrop-filter: blur(10px); */
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 5;
    transition: background-color 0.5s ease, backdrop-filter 1s ease, box-shadow 0.5s ease, transform 0.5s ease;
    /* transition: 1s ease; */
    gap: 4rem;
}
.logo {
    font-size: 2.8rem;
    color: var(--text-color);
    font-weight: 800;
    cursor: none;
    transition: 0.3s ease;
    min-width: fit-content;
}
.logo:hover {
    transform: scale(1.1);
}
.navbar{
    display: flex;
    align-items: center;
    transition: 1s ease;

}
.navbar a {
    font-size: 1.8rem;
    color: var(--text-color);
    margin-right: 4rem;
    font-weight: 600;
    transition: 0.3s ease;
}
.navbar a:hover,
.navbar a.active {
    color: var(--main-color);
    border-bottom: 3px solid var(--main-color);
}
.nav-container{
    display: flex;
    width: 100%;
    justify-content: center;
}
.nav-container .small{
    margin-left: auto;
}
#menu-icon {
    font-size: 3.6rem;
    color: var(--main-color);
    display: none;
}

section {
    min-height: 100vh;
    padding: 10rem 12% 10rem;
    transition: background-color 300ms ease, color 300ms ease;
    
}
#home {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15rem;
}
.home-content {
    display: flex;
    flex-direction: column;
    align-items: baseline;
    text-align: left;
    justify-content: center;
    margin-top: 3rem;
}
span {
    color: var(--main-color);
}
.logo span {
    color: var(--main-color);
    text-shadow: 0 0 25px var(--main-color);
    transition: 0.3s;
}

.logo span:hover {
    color: #97f9f9;
    text-shadow: 0 0 25px var(--light-main-color);
}
.home-content h3 {
    margin-bottom: 2rem;
    margin-top: 1rem;
    font-size: 3.5rem;
}
.home-content h1 {
    font-size: 7rem;
    font-weight: 700;
    margin-top: 1.5rem;
    line-height: 1;
}
.home-content ::selection {
    color: black;
    background-color: #aed4e6c8;
    overflow: hidden;
    margin: 0;
    padding: 0;
}
.home-content span::selection {
    color: var(--text-color);
}
.home-img {
    border-radius: 50%;
}
.home-img img {
    position: relative;
    top: 3rem;
    width: 32vw;
    border-radius: 50%;
    box-shadow: 0 0 25px 0px var(--main-color);
    background-color: var(--main-color);
    object-fit: cover;
    aspect-ratio: 1;
    cursor: none;
    transition: 0.4s ease-in-out;
}
.home-img img:hover {
    box-shadow: 0 0 25px var(--main-color), 0 0 50px var(--main-color),
        0 0 100px var(--main-color);
}
.home-content p {
    font-family: "Montserrat", sans-serif;
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 1.8;
    max-width: 1000px;
}
.social-icons a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 4.5rem;
    height: 4.5rem;
    background: transparent;
    border: 2px solid var(--main-color);
    font-size: 2.5rem;
    border-radius: 50%;
    color: var(--main-color);
    margin: 3rem 1.5rem 3rem 0;
    transition: 0.3s ease-in-out;
    cursor: hide;
}
/* ... */

